# SuperQuantLab-2.0

./: .gitignore  GITHUB_SETUP.md  PROJECT_SUMMARY.md  README.md  START_GUIDE.md
backend/: README.md  pyproject.toml  start.bat  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  demo_data.py  routes_backtest.py  routes_metrics.py  routes_strategies.py
backend/app/core/: config.py
backend/app/data/: __init__.py  loader.py  transforms.py
backend/app/engines/: __init__.py  backtest_engine.py  behavior_engine.py  chaos_engine.py  meta_engine.py  microstructure_engine.py
backend/app/models/: __init__.py  market.py  strategy.py
backend/app/services/: llm_strategy_service.py
backend/app/strategies/: __init__.py  base.py  ma_cluster_density.py  ma_crossover.py
backend/app/tests/: test_backtest_engine.py  test_chaos_engine.py  test_strategies.py
data/: .gitkeep  README.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/behavior/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/strategies/: page.tsx
frontend/components/charts/: ChaosIndexChart.tsx  DrawdownChart.tsx  EquityCurveChart.tsx  RegimeTimelineChart.tsx
frontend/lib/: api.ts  i18n.ts
